# Bash-AI-Agent-For-Arch-Linux

./: .env.example  README.md  agent.py  config.py  install.sh  pyproject.toml  requirements.txt  router.py  uninstall.sh
arch_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/: __init__.py  app_control.py  bash_exec.py  media_control.py  web_search.py
